--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">AndroidDemo1</string>
+    <string name="hello_world">Hello world</string>
+    <string name="setting_language">Set the language</string>
+    <string name="setting_language_prompt">Set the language ></string>
 </resources>
